# DataVault

./: .gitignore  Cargo.toml  README.md  config.example.toml
.github/workflows/: dev.yml  master.yml  rust.yml
html/static/preview/: main.css  nord.css
migrations/2021-03-07-194415_add_user/: up.sql
migrations/2021-03-08-115350_add_login_sessions/: down.sql  up.sql
migrations/2021-03-08-210944_add_namespace/: down.sql  up.sql
migrations/2021-03-09-165132_add_files/: up.sql
migrations/2021-03-09-192015_rename_columns/: down.sql  up.sql
migrations/2021-03-16-153213_add_attributes/: down.sql  up.sql
migrations/2021-03-17-211308_initial_migration/: down.sql  up.sql
src/: build.rs  config.rs  db.rs  http_errors.rs  main.rs  models.rs  response_code.rs  schema.rs  utils.rs
src/handlers/: attributes.rs  authentication.rs  chunked.rs  file.rs  file_action.rs  list_file.rs  mod.rs  namespace.rs  ping.rs  response.rs  session.rs  upload_file.rs  user.rs  utils.rs
src/handlers/requests/: attribute.rs  file.rs  mod.rs  upload_request.rs
src/handlers/web/: actix_ructe.rs  mod.rs  preview.rs  raw_file_preview.rs
src/models/: attribute.rs  file.rs  login_session.rs  mod.rs  namespace.rs  user.rs
templates/: content.rs.html  preview.rs.html
templates/templates/: content.rs.html  preview.rs.html  test.rs.html
