[package]
name = "dv_server"
version = "0.1.0"
authors = ["jojii <jojii@gmx.net>"]
description = "A centralized, modern, data managing and sharing solution"
license = "GPLv3"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.0-beta.4"
async-std = "1.9.0"
base64 = "0.13.0"
bytes = "1.0.1"
chrono = { version = "0.4.19", features = ["serde"] }
crc32fast = "1.2.1"
diesel = { version = "1.4.6", features = ["postgres","r2d2","chrono","64-column-tables"] }
dotenv = "0.15.0"
env_logger = "0.8.3"
futures = "0.3.13"
futures-core = "0.3.13"
infer = "0.3.5"
lazy_static = "1.4.0"
log = "0.4.14"
r2d2 = "0.8.9"
rand = "0.8.3"
serde = "1.0.124"
serde_json = "1.0.64"
sha2 = "0.9.3"
thiserror = "1.0.24"
toml = "0.5.8"
