[package]
name = "dv_server"
version = "0.1.0"
authors = ["jojii <jojii@gmx.net>"]
description = "A centralized, modern, data managing and sharing solution"
license = "GPLv3"
edition = "2018"
build = "src/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6.0-beta.3"
actix-web = "4.0.0-beta.4"
async-std = "1.9.0"
base64 = "0.13.0"
bigdecimal = "=0.1.2"
bytes = "1.0.1"
chrono = { version = "0.4.19", features = ["serde"] }
crc32fast = "1.2.1"
diesel = { version = "1.4.6", features = ["postgres","r2d2","chrono", "numeric"] }
dotenv = "0.15.0"
env_logger = "0.8.3"
futures = "0.3.13"
futures-core = "0.3.13"
humansize = "1.1.0"
infer = "0.3.6"
itertools = "0.10.0"
lazy_static = "1.4.0"
log = "0.4.14"
r2d2 = "0.8.9"
rand = "0.8.3"
ructe = "0.13.2"
serde = "1.0.125"
serde_json = "1.0.64"
sha2 = "0.9.3"
tar = "0.4.33"
thiserror = "1.0.24"
toml = "0.5.8"
zip = "0.5.11"

[dev-dependencies]
rand = "0.8.3"

[build-dependencies]
ructe = "0.13.2"
